devops-YAML.yaml
#---------------------------------------------------------------DEPLOYMENT---------------------------------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-deployment
  namespace: test-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brokerageweb
  template:
    metadata:
      labels:
        app: brokerageweb
    spec:
      containers:
      - name: brokerageweb
        image: nrt.ocir.io/nrcbpbtrtyz0/devops-repo:tagv1
        imagePullPolicy: Always 
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"                                        
      imagePullSecrets:
      - name: devops-secret
#------------------------------------------------------------------SERVICE---------------------------------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: devops-svc
  namespace: test-devops
spec:
  selector:
    app: brokerageweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
