gettingstarted-manifest.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: white
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-gettingstarted-deployment
  namespace: white
spec:
  selector:
    matchLabels:
      app: node-gettingstarted
  replicas: 1
  template:
    metadata:
      labels:
        app: node-gettingstarted
    spec:
      containers:
        - name: node-gettingstarted
          # enter the path to your image, be sure to include the correct region prefix
          image: nrt.ocir.io/nrcbpbtrtyz0/regs-container:${BUILDRUN_HASH}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: node-gettingstarted-service
  namespace: white
  annotations: 
    service.beta.kubernetes.io/oci-load-balancer-shape: "10Mbps"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: node-gettingstarted
