manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-devops-deployment
  namespace: supremo
spec:
  selector:
    matchLabels:
      app: java-app
  replicas: 1
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: nrt.ocir.io/nrcbpbtrtyz0/regs-container:${BUILDRUN_HASH}
          command: ["java"]
          args: ["-jar", "target/hello-0.0.1-SNAPSHOT.jar"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8890
              protocol: TCP
      imagePullSecrets:
        - name: supremo-secret
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: java-app-service
#  namespace: ns-green
#  annotations:
#    service.beta.kubernetes.io/oci-load-balancer-shape: "10Mbps"
#    service.beta.kubernetes.io/oci-load-balancer-backend-protocol: "HTTP"
#spec:
#  type: LoadBalancer
#  ports:
#    - port: 80
#      protocol: TCP
#      targetPort: 8890
#  selector:
#    app: java-app
apiVersion: v1
kind: Service
metadata:
  name: supremo-svc
  namespace: supremo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8890
  selector:
    app: java-app
#-------------------------------------------------------------------INGRESS--------------------------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supremo-ingress
  namespace: supremo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - supremo.mlhuillier.net
    secretName: net-tls
  rules:
  - host: supremo.mlhuillier.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: supremo-svc
            port:
              number: 80
